--- a/styles.css
+++ b/styles.css
@@ -30,4 +30,8 @@ button:hover {
 }
 #fileOption{
     display: flex;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
 }
