--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,15 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f4f4f9;
+    background-color: #e0f7ff;
+}
+h1 {
+    color: #004080;
 }
 form {
     margin-top: 20px;
 }
-input, textarea, button {
+input, textarea, button, select {
     display: block;
     margin-bottom: 10px;
     width: 100%;
@@ -15,11 +18,11 @@ input, textarea, button {
     font-size: 16px;
 }
 button {
-    background-color: #254336;
+    background-color: #0073e6;
     color: white;
     border: none;
     cursor: pointer;
 }
 button:hover {
-    background-color: #6B8A7A;
+    background-color: #005bb5;
 }
