--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     padding: 20px;
     background-color: #e0f7ff;
-    max-width: 360px;
+
     margin: 0 auto;
 }
 h1 {
@@ -11,6 +11,8 @@ h1 {
 }
 form {
     margin-top: 20px;
+    max-widht: 360px;
+    margin-bottom: 10%:
 }
 input, textarea, button, select {
     display: block;
